test/operator/add_bool_nil.lox
true + null // error: Operation not allowed
